# SubterraneanRose User Interface Module

aux_source_directory(./src ui_src_list)
aux_source_directory(./src/gui ui_gui_src_list)
list(APPEND ui_src_list ${ui_gui_src_list})
aux_source_directory(./src/gui/editor ui_gui_editor_src_list)
list(APPEND ui_src_list ${ui_gui_editor_src_list})


add_library("srose-ui" STATIC ${ui_src_list})
target_include_directories("srose-ui" PUBLIC ./include)

target_link_libraries("srose-ui" PUBLIC "srose-core")
target_link_libraries("srose-ui" PRIVATE "srose-main")
target_link_libraries("srose-ui" PUBLIC "srose-console")
target_link_libraries("srose-ui" PUBLIC "srose-trace")
target_link_libraries("srose-ui" PUBLIC "srose-i18n")
target_link_libraries("srose-ui" PUBLIC "srose-util")
target_link_libraries("srose-ui" PUBLIC "srose-fs")
target_link_libraries("srose-ui" PUBLIC "srose-wm")
target_link_libraries("srose-ui" PUBLIC "srose-gpu")
target_link_libraries("srose-ui" PUBLIC "srose-audio")
target_link_libraries("srose-ui" PUBLIC "srose-res")
target_link_libraries("srose-ui" PUBLIC "srose-player")
target_link_libraries("srose-ui" PUBLIC "srose-main")
if(${SROSE_DISABLE_DEMO})
    target_compile_definitions("srose-ui" PUBLIC SROSE_DISABLE_DEMO=1)
endif()
if(CMAKE_COMPILER_IS_GNUCXX)
    target_compile_options("srose-ui" PRIVATE "-Wno-format-security")
endif()

if(NOT ${SROSE_DISABLE_TEST})
    add_subdirectory(./test)
endif()
